# todo-list-vue-py

.github/workflows/: main.yml
backend/: .gitignore  README.md  backend.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/endpoints/: example.py
backend/app/core/: config.py
backend/app/models/: example.py
backend/app/schemas/: example.py
backend/app/tests/: test_example.py
frontend/: .gitignore  README.md  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/components/: HelloWorld.vue
frontend/src/views/: Home.vue
