[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Stephen Newman",email = "steve@newman.digital"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
