[project]
name = "backend"
version = "0.1.0"
description = "A simple API used to manage todo lists."
authors = [
    { name = "Stephen Newman", email = "steve@newman.digital"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
